samples/_failures_safe/1761712713_31bcbe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f138d0c4.c: In function ‘main’:
./samples/SAFE/__tmp_f138d0c4.c:154:5: error: expected expression at end of input
  154 |     graph_add_edge(&g, 1, 3,
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_f138d0c4.c:154:5: error: expected declaration or statement at end of input
